--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -4,7 +4,7 @@
 //  |__|  |__|__|_____| |_| |__|  |_____| |_| |_____|__|__|  NYARCH
 //
 //  by Bina
-// 这个配置是从Nyarchlinux照搬的"https://nyarchlinux.moe"
+// This is from Nyarsh copycat: "https://nyarchlinux.moe"
 
                                                        
 {
