--- a/.config/hypr/keybinds.conf
+++ b/.config/hypr/keybinds.conf
@@ -12,7 +12,6 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, J, togglesplit # dwindle
 bind = $mainMod, N, exec, neovide
 bind = $mainMod, E, exec, microsoft-edge-stable 
-#bind = $mainMod, W, exec, ./download/wechat.AppImage
 bind = $mainMod SHIFT, L, exec, hyprlock
 bind = $mainMod SHIFT, H, exec, ~/.config/hypr/scripts/key_hints.sh
 bind = $mainMod SHIFT, O, exec, ./Appimage/Obsidian-1.8.10.AppImage
@@ -75,23 +74,12 @@ bind = SUPER ALT, right, moveactive, 80 0
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
-#bind = $mainMod, L, exec, ~/.config/rofi/launchers/launcher.sh
-#bind = $mainMod SHIFT, L, exec, ~/.config/rofi/launchers/launcher-style-changer.sh
-#bind = $mainMod SHIFT, D, exec, /bin/bash ~/.config/hypr/scripts/wallSelect.sh
 bind = $mainMod SHIFT, D, exec, swayimg -r ~/Pictures/Wallpapers/
-#bind = $mainMod, D, exec, rofi -show drun | xargs hyprctl dispatch exec --
-#bind = $mainMod, D, exec, ~/.config/rofi/scripts/sidelauncher
-#bind = $mainMod, D, exec, /bin/python ~/.config/hyprun/hyprun.py
 bind = $mainMod, B, exec, ~/.config/rofi/scripts/clipboard_launcher.sh
 bind = $mainMod, D, exec, ~/.config/rofi/scripts/app_launcher.sh 
-#bind = $mainMod, D, exec, ~/.config/hypr/scripts/bemenu.sh
-# 搜索软件 bemenu-waylandi
+# bemenu-wayland
 
 bind = $mainMod, E, exec, ~/.config/rofi/scripts/emoji_launcher.sh
-#bind = $mainMod, D, exec, ~/.config/rofi/scripts/launcher
-#bind = $mainMod,a,exec, python /home/jorryjo/screenshot.py
 bind = $mainMod, S, togglefloating,
-#bind = $mainMod,x,exec, $HOME/.config/hypr/random_wallpaper.bash
-#bind = $mainMod, X, exec, $HOME/.config/hypr/static_wallpaper.bash
 bind = $mainMod, P, exec, grim -o eDP-1 ~/Pictures/"$(date +%Y-%m-%d--%H:%M:%S)".jpg && notify-send -u normal -i accessories-screenshot "截图$HOME/Pictures/"
 bind = $mainMod SHIFT, P, exec, grim -g "$(slurp)" ~/Pictures/"$(date +%Y-%m-%d--%H:%M:%S)".jpg && notify-send -u normal -i accessories-screenshot "截图$HOME/Pictures/"  
