--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -37,7 +37,7 @@ animations {
   
 
   # ----------------------------------------------
-    enabled = no
+    enabled = yes
     bezier = quart, 0.25, 1, 0.6, 1
 
     animation = windows, 1, 6, quart, 
